--- a/package.json
+++ b/package.json
@@ -1,16 +1,22 @@
 {
-  "name": "14-learn-tailwind",
+  "name": "tailwind-landing-page",
   "version": "1.0.0",
-  "description": "",
+  "description": "tailwind focused landing page",
   "main": "index.js",
   "scripts": {
     "build": "tailwindcss -i ./input.css -o ./css/main.css",
+    "prod": "NODE_ENV=production postcss input.css -o ./css/main.css",
     "watch": "tailwindcss -i ./input.css -o ./css/main.css --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "postcss": "^8.4.14",
+    "postcss-cli": "^9.1.0",
     "tailwindcss": "^3.1.4"
+  },
+  "dependencies": {
+    "autoprefixer": "^10.4.7"
   }
 }
